Some small updates for docs schema
