# swagger.yaml
@@ -37,6 +37,16 @@ definitions:
     - sku
     type: object
     x-go-package: github.com/krzysztofla/Example.Go.Api/data
+  ValidationError:
+    description: ValidationError is a collection of validation error messages
+    properties:
+      messages:
+        items:
+          type: string
+        type: array
+        x-go-name: Messages
+    type: object
+    x-go-package: github.com/krzysztofla/Example.Go.Api/handlers
 info:
   description: |-
     Documentation of Product API
@@ -57,6 +67,15 @@ paths:
     post:
       description: Create a new product
       operationId: createProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
       responses:
         "200":
           $ref: '#/responses/productResponse'
@@ -69,6 +88,22 @@ paths:
     put:
       description: Update a products details
       operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContentResponse'
@@ -78,13 +113,32 @@ paths:
           $ref: '#/responses/errorValidation'
       tags:
       - products
+  /items/{id}:
+    get:
+      description: Return prodcuct with given id from the database
+      operationId: getSingle
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+      tags:
+      - product
 produces:
 - application/json
 responses:
+  errorValidation:
+    description: Validation errors defined as an array of strings
+    schema:
+      $ref: '#/definitions/ValidationError'
+  productResponse:
+    description: single product
+    schema:
+      $ref: '#/definitions/Product'
   productsResponse:
     description: A list of products
     schema:
       items:
         $ref: '#/definitions/Product'
       type: array
+schemes:
+- http
 swagger: "2.0"
